tutorial/T_LoopInitError.out
T_LoopInitError.java:2: error: class T_loopInitError is public, should be declared in a file named T_loopInitError.java
public class T_loopInitError {
       ^
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
